Update nav style

--- a/_static/tr_style.css
+++ b/_static/tr_style.css
@@ -33,7 +33,7 @@ div.sidebartitle-docs-home-hr > hr {
 
 .wy-side-nav-search,
 .wy-nav-top {
-    background: #333;
+    background: #1e1d22;
 }
 
 
